# econsimulation

./: .gitignore  currentplan.md  fixingjulia.md  status.md  us_macro_simulator_source_of_truth_build.md  validation.md
us_macro_simulator/: STATUS.md  process_validation.md  pyproject.toml
us_macro_simulator/configs/base/: config.yaml
us_macro_simulator/configs/benchmarks/: stage1.yaml
us_macro_simulator/configs/stage1/: backtest.yaml  calibration.yaml  data.yaml  us_baseline.yaml
us_macro_simulator/configs/validation/: gates.yaml
us_macro_simulator/data/fixtures/: generate_fixtures.py  tier_a_aggregate.parquet  tier_a_crosssection.parquet  tier_b_aggregate.parquet
us_macro_simulator/docs/: benchmark_protocol.md  engine_adaptation_memo.md  julia_artifact_contract.md  julia_bootstrap.md  us_external_sector_memo.md
us_macro_simulator/scripts/: _helpers.py  build_us_calibration_bundle.py  export_fixture_inputs.py  fetch_dsge_data.py  generate_report.py  run_backtest.py  run_benchmarks.py  run_smoke.py  run_stage1.py  run_validation.py
us_macro_simulator/src/: __init__.py
us_macro_simulator/src/dashboards/: __init__.py  builder.py  charts.py
us_macro_simulator/src/julia_bundle/: __init__.py  evaluator.py  loader.py
us_macro_simulator/src/us/: __init__.py
us_macro_simulator/src/utils/: manifest.py  serialization.py
us_macro_simulator/src/validation/: __init__.py  harness.py  models.py
us_macro_simulator/tests/integration/: test_backtest.py  test_smoke.py  test_stage1_pipeline.py
us_macro_simulator/tests/unit/: test_benchmarks.py  test_one_step.py  (+7 more)
(+67 files in other folders)
