[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "us-macro-simulator"
version = "0.1.0"
description = "U.S. Macroeconomic Agent-Based Simulator (Stage 1)"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "jinja2>=3.1",
    "pyarrow>=13.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "hypothesis>=6.87", "ruff>=0.1", "mypy>=1.5"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
